<resources>
    <string name="app_name">PlayAndroid</string>
    <string name="menu_home">Home</string>
    <string name="menu_project">Project</string>
    <string name="menu_nav">Nav</string>
    <string name="menu_person">User</string>
    <string name="menu_official_account">Official Account</string>
    <string name="menu_logout">Sign out</string>
    <string name="menu_register">Sign up</string>
    <string name="menu_login">Sign in</string>
    <string name="menu_about">About APP</string>
    <string name="menu_code">Source code</string>
    <string name="menu_update">Check update</string>
    <string name="menu_setting">Settings</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="location_hint">Please text web site</string>
    <string name="none">none</string>
    <string name="ad">AD</string>
    <string name="analytic">ANALYTIC</string>
    <string name="test">TEST</string>
    <string name="malware">MALWARE</string>
    <string name="unwanted">UNWANTED</string>
    <string name="social">SOCIAL</string>
    <string name="content">CONTENT</string>
    <string name="harmful">HARMFUL</string>
    <string name="phishing">PHISHING</string>
    <string name="hasLogged">You have logged in</string>
    <string name="hasLogedOut">You have logged out</string>
    <string name="repoUrl">https://github.com/student9128/PlayAndroid</string>
</resources>
